# Counterpp-Lib

./: Counter++.sln  README.md
Counter++/: CMakeLists.txt  Counter++.vcxproj  Counter++.vcxproj.filters  calc.cpp  counterpp.h  main.cpp
